update experiment note

--- a/note.ipynb
+++ b/note.ipynb
@@ -4,38 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dynamic Causal Propagation"
+    "#### Experiment (I). Hiearhical Counting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 4.158883571624756\n",
-      "Epoch 2/20, Loss: 3.9783146381378174\n",
-      "Epoch 3/20, Loss: 3.731306791305542\n",
-      "Epoch 4/20, Loss: 3.5046794414520264\n",
-      "Epoch 5/20, Loss: 3.2924158573150635\n",
-      "Epoch 6/20, Loss: 3.079880475997925\n",
-      "Epoch 7/20, Loss: 2.8665931224823\n",
-      "Epoch 8/20, Loss: 2.656156063079834\n",
-      "Epoch 9/20, Loss: 2.4512057304382324\n",
-      "Epoch 10/20, Loss: 2.2491233348846436\n",
-      "Epoch 11/20, Loss: 2.052178382873535\n",
-      "Epoch 12/20, Loss: 1.8624504804611206\n",
-      "Epoch 13/20, Loss: 1.6795622110366821\n",
-      "Epoch 14/20, Loss: 1.5043525695800781\n",
-      "Epoch 15/20, Loss: 1.3342372179031372\n",
-      "Epoch 16/20, Loss: 1.1713873147964478\n",
-      "Epoch 17/20, Loss: 1.0061345100402832\n",
-      "Epoch 18/20, Loss: 0.858919084072113\n",
-      "Epoch 19/20, Loss: 0.7540488243103027\n",
-      "Epoch 20/20, Loss: 0.6810130476951599\n"
+      "\n",
+      "=======================================================\n",
+      "Hierarchical Sequence K=2 L=3 (aligned by timestamp):\n",
+      "-------------------------------------------------------\n",
+      "Level 2:                 [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2]             [2] \n",
+      "Level 1:         [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1]     [1] \n",
+      "Level 0:     [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] \n",
+      "=======================================================\n",
+      "Total tokens: 350, Max timestamp: 200\n",
+      "\n",
+      "Epoch 1/20, Loss: 4.158883094787598\n",
+      "Epoch 2/20, Loss: 3.982928991317749\n",
+      "Epoch 3/20, Loss: 3.7367403507232666\n",
+      "Epoch 4/20, Loss: 3.511340379714966\n",
+      "Epoch 5/20, Loss: 3.2963905334472656\n",
+      "Epoch 6/20, Loss: 3.083921194076538\n",
+      "Epoch 7/20, Loss: 2.8711421489715576\n",
+      "Epoch 8/20, Loss: 2.660209894180298\n",
+      "Epoch 9/20, Loss: 2.454684257507324\n",
+      "Epoch 10/20, Loss: 2.249798059463501\n",
+      "Epoch 11/20, Loss: 2.0464131832122803\n",
+      "Epoch 12/20, Loss: 1.8429228067398071\n",
+      "Epoch 13/20, Loss: 1.6336110830307007\n",
+      "Epoch 14/20, Loss: 1.4414186477661133\n",
+      "Epoch 15/20, Loss: 1.2757917642593384\n",
+      "Epoch 16/20, Loss: 1.1157773733139038\n",
+      "Epoch 17/20, Loss: 0.9748240113258362\n",
+      "Epoch 18/20, Loss: 0.8321359753608704\n",
+      "Epoch 19/20, Loss: 0.7076119780540466\n",
+      "Epoch 20/20, Loss: 0.6049309372901917\n"
      ]
     }
    ],
@@ -82,26 +92,30 @@
     "# ----------------------------------------------------\n",
     "\n",
     "L = 3\n",
-    "K = 3\n",
-    "T = 1024\n",
+    "K = 2\n",
+    "T = 200\n",
     "\n",
     "data = generate_count_seq(L, K, T)\n",
     "tokenizer = TinyTokenizer({str(k): k for k in range(10)})\n",
     "\n",
     "idx = [tokenizer(seq) for seq in data.values()]\n",
+    "idx += [[] for _ in range(L - len(idx))]\n",
     "samples = [(idx, None)]\n",
     "\n",
-    "from model import GATConfig, GAT, BatchedHierSeq\n",
+    "from model import GATConfig, GAT, HierSeq\n",
+    "from utils import stream_print_hseq\n",
     "from torch.optim import Adam \n",
     "\n",
     "config = GATConfig(K=K, L=L, n_embd=128, n_head=4, device=\"cpu\", _compile=False)\n",
     "gat = GAT(config)\n",
     "\n",
-    "batch_data = BatchedHierSeq.from_hierarchical_data(samples, K=gat.K, L=gat.L)\n",
+    "# .from_hiearchical_data has error: prepared token is NOT interleaved with correct causal ordering\n",
+    "batch_data = HierSeq.from_hierarchical_data(samples, K=gat.K, L=gat.L)\n",
+    "stream_print_hseq(batch_data) # sanity check\n",
     "\n",
     "# Batched Forward Propagation\n",
-    "epochs = 20 \n",
-    "gat.train()\n",
+    "epochs = 20\n",
+    "# gat.train()\n",
     "\n",
     "\n",
     "# Training Loop : learning just fine -- loss reduces quickly\n",
@@ -115,117 +129,238 @@
     "    optimizer.zero_grad()\n",
     "\n",
     "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {loss.item()}\")\n",
+    "    # break\n",
     "# ----------------------------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 1 at level 1\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 1 at level 1\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 1 at level 1\n",
-      "Generated token idx 2 at level 2\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n",
-      "Generated token idx 0 at level 0\n"
+      "\n",
+      "=======================================================\n",
+      "Hierarchical Sequence K=2 L=3 (aligned by timestamp):\n",
+      "-------------------------------------------------------\n",
+      "Level 2:                 [2]             [2]             [2]                 \n",
+      "Level 1:         [1]     [1]     [1]     [1]     [1]     [1]     [1]         \n",
+      "Level 0:     [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] [0] \n",
+      "=======================================================\n",
+      "Total tokens: 26, Max timestamp: 16\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Batched Generation: \n",
-    "test_data = generate_count_seq(L, K, 10)\n",
+    "from utils import * \n",
+    "\n",
+    "\n",
+    "test_data = generate_count_seq(L, K, 1)\n",
     "idx = [tokenizer(seq) for seq in test_data.values()]\n",
+    "idx += [[] for _ in range(L - len(idx))]\n",
     "test_samples = [(idx, None)]\n",
-    "test_batch_data = BatchedHierSeq.from_hierarchical_data(test_samples, K=gat.K, L=gat.L)\n",
+    "test_batch_data = HierSeq.from_hierarchical_data(test_samples, K=gat.K, L=gat.L)\n",
     "\n",
     "\n",
-    "# Bug: new-token level is not correct -- it's always 1 here\n",
-    "n_new_toks = 15\n",
-    "for _ in range(n_new_toks): \n",
-    "    test_batch_data = gat.generate(test_batch_data)\n",
-    "    print(f\"Generated token idx {test_batch_data.tokens[-1].item()} at level {test_batch_data.levels[-1].item()}\")\n"
+    "for _ in range(25): \n",
+    "    gat.generate(test_batch_data)\n",
+    "    stream_print_hseq(test_batch_data)\n",
+    "    time.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Self-Organizing Reinforcement Learning\n",
+    "1. A more exciting question is how can I build a GAT module for a Snake game? It'll be the natural test-bed for SoRL -- a snake with inner-monologue. \n",
+    "2. Decision Abstractive Transformer (DAT).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "Episode 0: Score=0, Reward=-10.6\n",
+      "Episode 1: Score=0, Reward=-11.0\n",
+      "Episode 2: Score=0, Reward=-11.700000000000001\n",
+      "Episode 3: Score=0, Reward=-12.3\n",
+      "Episode 4: Score=1, Reward=-1.5999999999999996\n",
+      "Sanity check passed: total 161 0-th level tokens (state & action)\n",
+      "Sanity check passed: 83 state tokens in data, 83 state tokens in trajectories\n",
+      "Sanity check passed: 78 action tokens in data, 78 action tokens in trajectories\n",
+      "Sanity check passed: 191 (action/state/abstract) tokens in data\n"
+     ]
+    }
+   ],
+   "source": [
+    "from snake import SnakeGameEngine, collect_trajectories, RandomAgent\n",
+    "from utils import HierTraj, data_sanity_check\n",
+    "from constant import PLACE_HOLDER_STATE_TOK, PLACE_HOLDER_ACTION_TOK\n",
+    "\n",
+    "env = SnakeGameEngine(width=10, height=10)\n",
+    "\n",
+    "# Collect trajectories\n",
+    "trajectories = collect_trajectories(env, RandomAgent(env), num_episodes=5, device=\"cpu\")\n",
+    "\n",
+    "samples = []\n",
+    "for trajectory in trajectories: \n",
+    "\n",
+    "    n_state = trajectory[0].size(0)\n",
+    "    placeholder_tokens = [PLACE_HOLDER_STATE_TOK if i % 2 == 0 else PLACE_HOLDER_ACTION_TOK for i in range(2*n_state-1)]\n",
+    "    sample = ([placeholder_tokens, [3, 9, 4, 2], [19, 14]], None)\n",
+    "    samples.append(sample)\n",
+    "\n",
+    "batch_data = HierTraj.from_hierarchical_data(samples, K=3, L=3)\n",
+    "data_sanity_check(batch_data, trajectories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model import DAT, DATConfig\n",
+    "\n",
+    "# DAT model \n",
+    "\n",
+    "config = DATConfig(\n",
+    "    n_layer=4,\n",
+    "    n_head=2,\n",
+    "    n_embd=32,\n",
+    "    K=2,\n",
+    "    L=3,\n",
+    "    vocab_size_list=[64, 32],\n",
+    "    device=\"cpu\",\n",
+    "    _compile=True,\n",
+    ")\n",
+    "\n",
+    "# Snake specific encoder & decoder for state & action\n",
+    "from snake import StateEncoder, StateDecoder, ActionEncoder, ActionDecoder\n",
+    "\n",
+    "state_encoder = StateEncoder(height=10, width=10, feature_dim=config.n_embd)\n",
+    "state_decoder = StateDecoder(height=10, width=10, feature_dim=config.n_embd)\n",
+    "action_encoder = ActionEncoder(action_size=4, feature_dim=config.n_embd)\n",
+    "action_decoder = ActionDecoder(action_size=4, feature_dim=config.n_embd)\n",
+    "\n",
+    "dat = DAT(config, state_encoder, state_decoder, action_encoder, action_decoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute loss\n",
+    "loss = dat(batch_data, trajectories)\n",
+    "\n",
+    "# generate & update \n",
+    "new_batch_data, new_trajectories = dat.generate(batch_data, trajectories)\n",
+    "\n",
+    "# act: produce action tokens (if there already exists action-tokens un-grounded with reward, skip it)\n",
+    "pairs = dat.act(batch_data, trajectories) # list of (sample_idx, action_idx)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=======================================================\n",
+      "Hierarchical Trajectory K=2 L=3 (aligned by timestamp):\n",
+      "-------------------------------------------------------\n",
+      "Level 2:              [0]             [0]             [0]                 \n",
+      "Level 1:      [0]     [0]     [0]     [0]     [0]     [0]     [0]         \n",
+      "L0-State: [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] [s] \n",
+      "L0-Action:    [a] [a] [a] [a] [a] [a] [a] [a] [a] [a] [a] [a] [a] [a] [a] \n",
+      "=======================================================\n",
+      "Total tokens: 41, Max timestamp: 15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validate on 'order of generation'\n",
+    "from utils import test_dat_gen_order\n",
+    "\n",
+    "# Sanity check-up function (order of generation)\n",
+    "test_dat_gen_order(dat, env, L=3, K=2, n_gen=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Does DAT dream of playing snake game?\n",
+    "\n",
+    "\n",
+    "from agent import HiearchicalAgent\n",
+    "from snake import SnakeGameEngine\n",
+    "\n",
+    "# Environment\n",
+    "env = SnakeGameEngine(width=10, height=10)\n",
+    "# Initial obs\n",
+    "init_obs = env.reset()\n",
+    "# DAT agent \n",
+    "dat_dude = HiearchicalAgent(dat, init_obs, \"cpu\")\n",
+    "\n",
+    "# TBD: \n",
+    "# - implement the 'environment feedback' function \n",
+    "# - update on trajectory based on environment feedback \n",
+    "# - visualize a clueless DAT dude playing snake game\n",
+    "# - implement DRA algorithm and into DAT dude / DAT module\n",
+    "# - one step closer into SoRL \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BatchedHierSeq(tokens=tensor([0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0,\n",
-       "        1, 2, 0, 0, 0]), levels=tensor([0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0,\n",
-       "        1, 2, 0, 0, 0]), timestamps=tensor([ 1,  2,  3,  3,  4,  5,  6,  6,  7,  8,  9,  9,  9, 10, 11, 12, 12, 13,\n",
-       "        14, 15, 15, 16, 17, 18, 18, 18, 19, 20, 21]), sample_idx=tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "        0, 0, 0, 0, 0]), batch_size=1, K=3, L=3)"
+       "tensor([0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_batch_data"
+    "dat_dude.act(0.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BatchedHierSeq(tokens=tensor([10, 11, 12, 20, 21, 30,  0, 40, 41, 42, 50, 43, 51, 31,  0]), levels=tensor([0, 0, 0, 1, 1, 2, 0, 0, 0, 0, 1, 0, 1, 2, 0]), timestamps=tensor([ 1,  2,  3,  3,  6,  9, 10,  1,  2,  3,  3,  4,  6,  9, 10]), sample_idx=tensor([0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1]), batch_size=2, K=3, L=3)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from model import GATConfig, GAT, BatchedHierSeq\n",
+    "# DRA, Hyperball trick, SoRL\n",
     "\n",
-    "\n",
-    "K, L = 3, 3\n",
-    "config = GATConfig(K=K, L=L, n_embd=128, n_head=4, device=\"cpu\", _compile=False)\n",
-    "gat = GAT(config)\n",
-    "\n",
-    "samples = [\n",
-    "    (\n",
-    "        [[10, 11, 12], [20, 21], [30]],  # token_sequences for sample 1\n",
-    "        None  # will generate default timestamps\n",
-    "    ),\n",
-    "    (\n",
-    "        [[40, 41, 42, 43], [50, 51], [31]],  # token_sequences for sample 2  \n",
-    "        None\n",
-    "    )\n",
-    "]\n",
-    "\n",
-    "batch_data = BatchedHierSeq.from_hierarchical_data(samples, K=gat.K, L=gat.L)\n",
-    "\n",
-    "# Batched forward propagation\n",
-    "gat(batch_data)\n",
-    "\n",
-    "# Batched generation\n",
-    "gat.generate(batch_data)"
+    "def discovery_refinement_advantage()\n"
    ]
   },
   {
