--- a/note.ipynb
+++ b/note.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,16 +209,36 @@
     "    new_tokens.scatter_(1, original_dest_indices, tokens)\n",
     "\n",
     "    ph_rows, ph_cols = insert_masks.nonzero(as_tuple=True)\n",
-    "    ph_shifts = shifts[ph_rows, ph_cols]\n",
-    "    ph_dest_cols = ph_cols + 1 + ph_shifts\n",
-    "    new_tokens[ph_rows, ph_dest_cols] = placeholder_token\n",
+    "    \n",
+    "    if ph_rows.numel() > 0:\n",
+    "        n_inserts = insert_masks[ph_rows, ph_cols]\n",
+    "        token_dest_indices = ph_cols + shifts[ph_rows, ph_cols]\n",
+    "        ph_offsets = torch.cat([torch.arange(1, k + 1, device=device) for k in n_inserts])\n",
+    "        ph_dest_rows = torch.repeat_interleave(ph_rows, n_inserts)\n",
+    "        repeated_token_dest = torch.repeat_interleave(token_dest_indices, n_inserts)\n",
+    "        ph_dest_cols = repeated_token_dest + ph_offsets\n",
+    "        new_tokens[ph_dest_rows, ph_dest_cols] = placeholder_token\n",
     "\n",
-    "    return new_tokens"
+    "    return new_tokens\n",
+    "\n",
+    "\n",
+    "def allocate_budget(spike_weights, abstract_budget):\n",
+    "    normalized_weights = spike_weights / spike_weights.sum()\n",
+    "    ideal_counts = normalized_weights * abstract_budget\n",
+    "    token_counts = torch.floor(ideal_counts).long()\n",
+    "    remainder = abstract_budget - token_counts.sum()\n",
+    "\n",
+    "    if remainder > 0:\n",
+    "        residuals = ideal_counts - token_counts\n",
+    "        _, top_indices = torch.topk(residuals, int(remainder))\n",
+    "        token_counts[top_indices] += 1\n",
+    "\n",
+    "    return token_counts "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,11 +256,13 @@
     "# forward propagation through GAT module\n",
     "# (Option 1. remove the level-embedding part -- does not help in \"search advantage\")\n",
     "# (Option 2. keep the level-embedding)\n",
-    "idx = data[:, :-1].contiguous()\n",
-    "target = data[:, 1:].contiguous() # .continuous() is important to avoid error for '.view()'\n",
+    "idx = data[:, :-1].contiguous().clone()\n",
+    "target = data[:, 1:].contiguous().clone() # .continuous() is important to avoid error for '.view()'\n",
     "\n",
     "# forward propagation : compute perplexity per token (traj & abstract)\n",
     "ppt = model(idx, target)\n",
+    "\n",
+    "idx = data.contiguous()\n",
     "\n",
     "# generate return next_token (1 per sample)\n",
     "next_idx, kv_cache = model.generate(idx, temperature=0.0)\n",
@@ -252,20 +274,232 @@
     "denoise_mask[1, 0] = True \n",
     "denoise_mask[1, 1] = True \n",
     "\n",
-    "# denoise\n",
-    "updated_idx = model.denoise(idx, denoise_mask, temperature=0.0) # denoise return an updated idx"
+    "# denoise | it conduct in-place update\n",
+    "from copy import deepcopy \n",
+    "denoise_idx = deepcopy(idx)\n",
+    "denoise_idx = model.denoise(denoise_idx, denoise_mask, temperature=0.0) # denoise return an updated idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The perplexity-based padding occurs level by level \n",
+    "# - one must first have level l tokens, then compute ppt, then allocate placeholder level l+1 tokens\n",
     "# ----------------------------------------------------------------------------------------------------------------\n",
+    "tokens = deepcopy(data)\n",
     "\n",
-    "\n"
+    "idx = tokens[:, :-1].contiguous()\n",
+    "target = tokens[:, 1:].contiguous()\n",
+    "abstract_budgets = torch.tensor([0, 5])\n",
+    "l = 1 \n",
+    "\n",
+    "# with torch.no_grad():\n",
+    "#     ppt = model(idx, target)\n",
+    "ppt = torch.tensor([[0.1,0.2,0.3,0.0,0.1,0.2,0.3], [0.1,0.2,0.3,0.0,0.1,0.2,0.3]])\n",
+    "\n",
+    "levels = infer_level(tokens, model.vocab_sizes, model.level_mask_tokens[0])\n",
+    "level_masks = (levels[:, 1:] == l-1)\n",
+    "\n",
+    "ppt_increase = torch.zeros_like(ppt[:, 1:], device=ppt.device).float()\n",
+    "for i, (sample_ppt, level_mask) in enumerate(zip(ppt, level_masks)): \n",
+    "    sample_ppt = sample_ppt[level_mask]\n",
+    "    ppt_increase[i, level_mask[1:]] = sample_ppt[1:] - sample_ppt[:-1]\n",
+    "\n",
+    "abstract_budget = abstract_budgets[l]\n",
+    "spike_mask = (ppt_increase > 0) \n",
+    "spike_indices = torch.where(spike_mask)[0]\n",
+    "\n",
+    "if spike_indices.numel() > 0: \n",
+    "    \n",
+    "    spike_weights = ppt_increase[spike_mask]\n",
+    "    token_counts = allocate_budget(spike_weights, abstract_budget)\n",
+    "\n",
+    "    non_zero_mask = token_counts > 0\n",
+    "    final_counts = token_counts[non_zero_mask].int()\n",
+    "    final_indices = spike_indices[non_zero_mask]\n",
+    "\n",
+    "    # - insert_mask (we can put integer value into the mask, too)\n",
+    "    insert_masks = torch.zeros_like(spike_mask).int()\n",
+    "    update_mask = torch.zeros_like(insert_masks, dtype=torch.bool)\n",
+    "    update_mask[spike_mask] = non_zero_mask\n",
+    "    insert_masks[update_mask] = final_counts\n",
+    "    insert_masks = torch.cat([torch.zeros_like(spike_mask).int()[:, :2], insert_masks], dim=1) # operate on 'data'\n",
+    "\n",
+    "    new_tokens = insert_tokens(tokens, insert_masks, model.level_mask_tokens[l], model.level_mask_tokens[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1,  2,  3, 16, 12,  4,  5,  6, 16,  7, 16],\n",
+       "        [ 1,  2,  3,  5, 16,  4,  5,  6,  7, 16, 10]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_tokens\n",
+    "# tokens\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spike_mask.sh\n",
+    "insert_masks[spike_mask][non_zero_mask] = final_counts.int()\n",
+    "# final_counts\n",
+    "# non_zero_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 0, 0], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insert_masks[spike_mask][non_zero_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# levels = infer_level(tokens, model.vocab_sizes, model.level_mask_tokens[0])\n",
+    "level_masks = (levels[:, 1:] == l-1)\n",
+    "# ppt = ppt[level_mask]\n",
+    "\n",
+    "ppts = torch.tensor([[0.1,0.2,0.3,0.0,0.1,0.2,0.3], [0.1,0.2,0.3,0.0,0.1,0.2,0.3]])\n",
+    "ppt_increases = torch.zeros_like(ppts[:, 1:], device=ppts.device).float()\n",
+    "\n",
+    "for i, (ppt, level_mask) in enumerate(zip(ppts, level_masks)): \n",
+    "    ppt = ppt[level_mask]\n",
+    "    ppt_increase = ppt[1:] - ppt[:-1]\n",
+    "    ppt_increases[i, level_mask[1:]] = ppt_increase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1000,  0.0000, -0.2000,  0.1000,  0.1000,  0.1000],\n",
+       "        [ 0.1000,  0.1000, -0.3000,  0.1000,  0.1000,  0.1000]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ppt_increases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "levels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ True,  True, False,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "level_masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,42 +509,19 @@
    "source": [
     "vocab_sizes = model.vocab_sizes\n",
     "K = model.K \n",
-    "tokens = idx\n",
+    "L = model.L\n",
+    "tokens = deepcopy(data)\n",
     "l = 1\n",
     "\n",
     "# rythmic placeholder insertion\n",
-    "\n",
-    "levels = infer_level(tokens, vocab_sizes, model.level_mask_tokens[0])\n",
-    "timestamps = infer_timestamp(levels, K, l)\n",
-    "\n",
-    "insert_masks = infer_rythmic_insertion_mask(levels, timestamps, K, l)\n",
-    "\n",
-    "# we'd use last token in level-0 as pad token\n",
-    "new_tokens = insert_tokens(tokens, insert_masks, model.level_mask_tokens[l], model.level_mask_tokens[0])\n",
+    "for l in range(1, L):\n",
+    "    levels = infer_level(tokens, vocab_sizes, model.level_mask_tokens[0])\n",
+    "    timestamps = infer_timestamp(levels, K, l)\n",
+    "    insert_masks = infer_rythmic_insertion_mask(levels, timestamps, K, l)\n",
+    "    tokens = insert_tokens(tokens, insert_masks.int(), model.level_mask_tokens[l], model.level_mask_tokens[0])\n",
     "\n",
     "# Similarly, we can perform perplexity-based placeholder insertion"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
