--- a/note.ipynb
+++ b/note.ipynb
@@ -92,435 +92,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--- Testing generate_rollout_data ---\n"
+      "Initialized GAT model\n"
      ]
     }
    ],
    "source": [
-    "from gat import GATConfig, reGAT\n",
-    "from sorl import generate_rollout_data\n",
-    "from search import repeat_hseq # Assuming repeat_hseq is in search.py\n",
-    "from utils import HierSeq\n",
+    "from src import GATConfig, GAT\n",
     "import torch \n",
-    "\n",
-    "print(\"\\n--- Testing generate_rollout_data ---\")\n",
     "\n",
     "# 1. Setup a dummy model and data\n",
     "config = GATConfig(L=2, K=3, vocab_size_list=[10, 5], device='cpu')\n",
-    "model = reGAT(config)\n",
+    "model = GAT(config)\n",
     "model.eval()\n",
     "\n",
-    "h_data = [\n",
-    "    ([1, 2, 3, 4, 5, 6, 7], []), # L0 tokens, no abstractions\n",
-    "    ([1, 2, 3, 4, 5, 6, 7], [])\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Refactor: What if we put different sample in different batch dimension?"
+    "print(f\"Initialized GAT model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# util functions \n",
-    "# ------------------------------------------------------------------------\n",
-    "def infer_level(indices: torch.Tensor, vocab_sizes: torch.Tensor, pad_token: int):\n",
-    "    indices_expanded = indices.unsqueeze(-1)  # [batch_size, seq_len, 1]\n",
-    "    levels = (indices_expanded < vocab_sizes.cumsum(dim=0)).int().argmax(dim=-1)\n",
+    "from src import infer_level\n",
+    "from copy import deepcopy \n",
+    "from src.sorl import prep_denoise\n",
     "\n",
-    "    padding_mask = (indices == pad_token)\n",
-    "    final_levels = torch.where(padding_mask, -1, levels.long())\n",
-    "    return final_levels\n",
-    "\n",
-    "# this produces 'abstract timestamps'\n",
-    "def infer_timestamp(levels: torch.Tensor, K: int, l: int = 1) -> torch.Tensor:\n",
-    "    is_level = (levels == l-1).long()  \n",
-    "    cumulative_counts = torch.cumsum(is_level, dim=-1)\n",
-    "    timestamps = (cumulative_counts - 1) // K\n",
-    "    timestamps.clamp_(min=0) # this assings the correct timestamp \n",
-    "    return timestamps\n",
-    "\n",
-    "# Rhythmic insertion mask calculation\n",
-    "def infer_rythmic_insertion_mask(levels: torch.Tensor, timestamps: torch.Tensor, K: int, l: int): \n",
-    "\n",
-    "    within_level_mask = (levels <= l)\n",
-    "    timestamps[~within_level_mask] = False \n",
-    "\n",
-    "    B = timestamps.size(0)\n",
-    "    is_end_of_groups = torch.cat([\n",
-    "        (timestamps[:, :-1] != timestamps[:, 1:]),\n",
-    "        torch.full((B, 1), True, device=timestamps.device)\n",
-    "    ], dim=1)\n",
-    "\n",
-    "    is_valid_elements = [] \n",
-    "    for timestamp in timestamps: \n",
-    "        group_counts = torch.bincount(timestamp) # count consecutive value group size\n",
-    "        is_valid_group = group_counts >= K \n",
-    "        is_valid_element = is_valid_group[timestamp] # timestamp starts from 0 makes this valid\n",
-    "        is_valid_elements.append(is_valid_element)\n",
-    "    is_valid_elements = torch.stack(is_valid_elements, dim=0)\n",
-    "\n",
-    "    insert_mask = is_end_of_groups & is_valid_elements\n",
-    "    return insert_mask # insert after 'True' position suffices\n",
-    "\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "def insert_tokens(\n",
-    "    tokens: torch.Tensor,\n",
-    "    insert_masks: torch.Tensor,\n",
-    "    placeholder_token: int,\n",
-    "    pad_token: int\n",
-    ") -> torch.Tensor:\n",
-    "\n",
-    "    B, S_orig = tokens.shape\n",
-    "    device = tokens.device\n",
-    "\n",
-    "    n_insertions_per_sample = insert_masks.sum(dim=1)\n",
-    "    max_n_insertions = n_insertions_per_sample.max().item()\n",
-    "\n",
-    "    if max_n_insertions == 0:\n",
-    "        return tokens\n",
-    "\n",
-    "    S_new = S_orig + max_n_insertions\n",
-    "    \n",
-    "    new_tokens = torch.full((B, S_new), pad_token, dtype=tokens.dtype, device=device)\n",
-    "\n",
-    "    padded_masks = F.pad(insert_masks, (1, 0), value=0)[:, :-1].long()\n",
-    "    shifts = torch.cumsum(padded_masks, dim=1)\n",
-    "\n",
-    "    original_indices_seq = torch.arange(S_orig, device=device).expand(B, -1)\n",
-    "    original_dest_indices = original_indices_seq + shifts\n",
-    "\n",
-    "    new_tokens.scatter_(1, original_dest_indices, tokens)\n",
-    "\n",
-    "    ph_rows, ph_cols = insert_masks.nonzero(as_tuple=True)\n",
-    "    \n",
-    "    if ph_rows.numel() > 0:\n",
-    "        n_inserts = insert_masks[ph_rows, ph_cols]\n",
-    "        token_dest_indices = ph_cols + shifts[ph_rows, ph_cols]\n",
-    "        ph_offsets = torch.cat([torch.arange(1, k + 1, device=device) for k in n_inserts])\n",
-    "        ph_dest_rows = torch.repeat_interleave(ph_rows, n_inserts)\n",
-    "        repeated_token_dest = torch.repeat_interleave(token_dest_indices, n_inserts)\n",
-    "        ph_dest_cols = repeated_token_dest + ph_offsets\n",
-    "        new_tokens[ph_dest_rows, ph_dest_cols] = placeholder_token\n",
-    "\n",
-    "    return new_tokens\n",
-    "\n",
-    "\n",
-    "def allocate_budget(spike_weights, abstract_budget):\n",
-    "    normalized_weights = spike_weights / spike_weights.sum()\n",
-    "    ideal_counts = normalized_weights * abstract_budget\n",
-    "    token_counts = torch.floor(ideal_counts).long()\n",
-    "    remainder = abstract_budget - token_counts.sum()\n",
-    "\n",
-    "    if remainder > 0:\n",
-    "        residuals = ideal_counts - token_counts\n",
-    "        _, top_indices = torch.topk(residuals, int(remainder))\n",
-    "        token_counts[top_indices] += 1\n",
-    "\n",
-    "    return token_counts "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We just need to record 'level' besides 'token idx'\n",
-    "# - in fact, given our per-level vocabulary size parameter, we can just record 'token_idx' as level can be inferred directly from it\n",
-    "\n",
-    "# convert h_data into idx (batched ver, no flattening at all)\n",
     "\n",
     "# hierarchical data (ordered) -- it mixes abstract & non-abstract tokens\n",
-    "data = torch.tensor([[1,2,3,12,4,5,6,7], [1,2,3,5,4,5,6,7]]) \n",
-    "\n",
-    "# infer level from 'idx' (that optionally contains 'abstract' token)\n",
-    "# levels = infer_level_from_idx(idx, model.vocab_sizes)\n",
-    "\n",
-    "# forward propagation through GAT module\n",
-    "# (Option 1. remove the level-embedding part -- does not help in \"search advantage\")\n",
-    "# (Option 2. keep the level-embedding)\n",
-    "idx = data[:, :-1].contiguous().clone()\n",
-    "target = data[:, 1:].contiguous().clone() # .continuous() is important to avoid error for '.view()'\n",
+    "data = torch.tensor([[1,2,3,1,4,5,6,7], [1,2,3,5,4,5,6,7]]) \n",
     "\n",
     "# forward propagation : compute perplexity per token (traj & abstract)\n",
+    "idx = data[:, :-1].contiguous().clone()\n",
+    "target = data[:, 1:].contiguous().clone() \n",
     "ppt = model(idx, target)\n",
     "\n",
+    "# causal generate return next_token (1 per sample)\n",
     "idx = data.contiguous()\n",
+    "next_idx, kv_cache, levels = model.generate(idx, temperature=0.0)\n",
+    "next_idx, kv_cache, levels = model.generate(next_idx.unsqueeze(1), temperature=0.0, kv_cache=kv_cache, levels=levels)\n",
     "\n",
-    "# generate return next_token (1 per sample)\n",
-    "next_idx, kv_cache = model.generate(idx, temperature=0.0)\n",
-    "next_idx, kv_cache = model.generate(next_idx.unsqueeze(1), temperature=0.0, kv_cache=kv_cache)\n",
-    "\n",
-    "# denoise return updated idx, variable number of tokens updated per sample\n",
+    "# parallel denoise (return updated token sequence) \n",
     "levels = infer_level(idx, model.vocab_sizes, model.level_mask_tokens[0])\n",
-    "denoise_mask = levels.bool()\n",
+    "denoise_mask = levels.bool() # toy denoise mask\n",
     "denoise_mask[1, 0] = True \n",
     "denoise_mask[1, 1] = True \n",
     "\n",
+    "from src import pad_abstract_tokens\n",
     "# denoise | it conduct in-place update\n",
-    "from copy import deepcopy \n",
     "denoise_idx = deepcopy(idx)\n",
-    "denoise_idx = model.denoise(denoise_idx, denoise_mask, temperature=0.0) # denoise return an updated idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The perplexity-based padding occurs level by level \n",
-    "# - one must first have level l tokens, then compute ppt, then allocate placeholder level l+1 tokens\n",
-    "# ----------------------------------------------------------------------------------------------------------------\n",
-    "tokens = deepcopy(data)\n",
-    "\n",
-    "idx = tokens[:, :-1].contiguous()\n",
-    "target = tokens[:, 1:].contiguous()\n",
-    "abstract_budgets = torch.tensor([0, 5])\n",
-    "l = 1 \n",
-    "\n",
-    "# with torch.no_grad():\n",
-    "#     ppt = model(idx, target)\n",
-    "ppt = torch.tensor([[0.1,0.2,0.3,0.0,0.1,0.2,0.3], [0.1,0.2,0.3,0.0,0.1,0.2,0.3]])\n",
-    "\n",
-    "levels = infer_level(tokens, model.vocab_sizes, model.level_mask_tokens[0])\n",
-    "level_masks = (levels[:, 1:] == l-1)\n",
-    "\n",
-    "ppt_increase = torch.zeros_like(ppt[:, 1:], device=ppt.device).float()\n",
-    "for i, (sample_ppt, level_mask) in enumerate(zip(ppt, level_masks)): \n",
-    "    sample_ppt = sample_ppt[level_mask]\n",
-    "    ppt_increase[i, level_mask[1:]] = sample_ppt[1:] - sample_ppt[:-1]\n",
-    "\n",
-    "abstract_budget = abstract_budgets[l]\n",
-    "spike_mask = (ppt_increase > 0) \n",
-    "spike_indices = torch.where(spike_mask)[0]\n",
-    "\n",
-    "if spike_indices.numel() > 0: \n",
-    "    \n",
-    "    spike_weights = ppt_increase[spike_mask]\n",
-    "    token_counts = allocate_budget(spike_weights, abstract_budget)\n",
-    "\n",
-    "    non_zero_mask = token_counts > 0\n",
-    "    final_counts = token_counts[non_zero_mask].int()\n",
-    "    final_indices = spike_indices[non_zero_mask]\n",
-    "\n",
-    "    # - insert_mask (we can put integer value into the mask, too)\n",
-    "    insert_masks = torch.zeros_like(spike_mask).int()\n",
-    "    update_mask = torch.zeros_like(insert_masks, dtype=torch.bool)\n",
-    "    update_mask[spike_mask] = non_zero_mask\n",
-    "    insert_masks[update_mask] = final_counts\n",
-    "    insert_masks = torch.cat([torch.zeros_like(spike_mask).int()[:, :2], insert_masks], dim=1) # operate on 'data'\n",
-    "\n",
-    "    new_tokens = insert_tokens(tokens, insert_masks, model.level_mask_tokens[l], model.level_mask_tokens[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1,  2,  3, 16, 12,  4,  5,  6, 16,  7, 16],\n",
-       "        [ 1,  2,  3,  5, 16,  4,  5,  6,  7, 16, 10]])"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_tokens\n",
-    "# tokens\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spike_mask.sh\n",
-    "insert_masks[spike_mask][non_zero_mask] = final_counts.int()\n",
-    "# final_counts\n",
-    "# non_zero_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 0, 0, 0, 0], dtype=torch.int32)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "insert_masks[spike_mask][non_zero_mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1, 1, 1, 1, 1])"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# levels = infer_level(tokens, model.vocab_sizes, model.level_mask_tokens[0])\n",
-    "level_masks = (levels[:, 1:] == l-1)\n",
-    "# ppt = ppt[level_mask]\n",
-    "\n",
-    "ppts = torch.tensor([[0.1,0.2,0.3,0.0,0.1,0.2,0.3], [0.1,0.2,0.3,0.0,0.1,0.2,0.3]])\n",
-    "ppt_increases = torch.zeros_like(ppts[:, 1:], device=ppts.device).float()\n",
-    "\n",
-    "for i, (ppt, level_mask) in enumerate(zip(ppts, level_masks)): \n",
-    "    ppt = ppt[level_mask]\n",
-    "    ppt_increase = ppt[1:] - ppt[:-1]\n",
-    "    ppt_increases[i, level_mask[1:]] = ppt_increase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.1000,  0.0000, -0.2000,  0.1000,  0.1000,  0.1000],\n",
-       "        [ 0.1000,  0.1000, -0.3000,  0.1000,  0.1000,  0.1000]])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ppt_increases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0, 0, 0, 1, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "levels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ True,  True, False,  True,  True,  True,  True],\n",
-       "        [ True,  True,  True,  True,  True,  True,  True]])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "level_masks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab_sizes = model.vocab_sizes\n",
-    "K = model.K \n",
-    "L = model.L\n",
-    "tokens = deepcopy(data)\n",
     "l = 1\n",
+    "denoise_idx = pad_abstract_tokens(denoise_idx, model, l, use_rhythmic_placeholders=True)\n",
+    "denoise_mask, denoise_levels = prep_denoise(denoise_idx, model)\n",
     "\n",
-    "# rythmic placeholder insertion\n",
-    "for l in range(1, L):\n",
-    "    levels = infer_level(tokens, vocab_sizes, model.level_mask_tokens[0])\n",
-    "    timestamps = infer_timestamp(levels, K, l)\n",
-    "    insert_masks = infer_rythmic_insertion_mask(levels, timestamps, K, l)\n",
-    "    tokens = insert_tokens(tokens, insert_masks.int(), model.level_mask_tokens[l], model.level_mask_tokens[0])\n",
+    "denoise_idx = model.denoise(denoise_idx, denoise_mask, denoise_levels, temperature=0.0) # denoise return an updated idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1,  2,  3, 11,  1,  4,  5, 11,  6,  7],\n",
+       "        [ 1,  2,  3, 11,  5,  4,  5, 11,  6,  7]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src import sorl_search, SORLConfig\n",
     "\n",
-    "# Similarly, we can perform perplexity-based placeholder insertion"
+    "sorl_config = SORLConfig(l=1, n=3, temperature=1.0, steps=5, abstract_budget=5)\n",
+    "\n",
+    "sorl_search(data, model, sorl_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: tensor(2.8332, grad_fn=<UnbindBackward0>), 1: tensor(0.)}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hierarchical data (ordered) -- it mixes abstract & non-abstract tokens\n",
+    "data = torch.tensor([[1,2,3,1,4,5,6,7], [1,2,3,5,4,5,6,7]]) \n",
+    "\n",
+    "# forward propagation : compute perplexity per token (traj & abstract)\n",
+    "idx = data[:, :-1].contiguous().clone()\n",
+    "target = data[:, 1:].contiguous().clone() \n",
+    "ppt = model(idx, target)\n",
+    "\n",
+    "\n",
+    "from src.sorl import compute_loss \n",
+    "\n",
+    "compute_loss(data, model, ppt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# on evaluation / generation\n",
+    "# ------------------------------------------------------------------------------------------------\n",
+    "# (Causal Abstraction Search)\n",
+    "# (Model-Based Abstraction Search)\n",
+    "\n",
+    "# (a). token-by-token generation, using model's own logit table to determine whether to generate abstraction or not\n",
+    "\n",
+    "data # let's say this is the GT sequence to evaluate\n",
+    "\n",
+    "# Causal abstraction generation \n",
+    "kv_cache, levels = None, None\n",
+    "\n",
+    "current_idx = data[:, :1].contiguous()\n",
+    "for i in range(1, data.size(1)):\n",
+    "    next_idx, kv_cache, levels = model.generate(current_idx, temperature=0.0, kv_cache=kv_cache, levels=levels)\n",
+    "    next_level = infer_level(next_idx, model.vocab_sizes, model.level_mask_tokens[0])\n",
+    "    abstract_mask = next_level > 0\n",
+    "    current_idx = data[:, i][~abstract_mask]\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_idx.shape"
    ]
   },
   {
